# k3

./: .gitignore  .gitmodules  CLIENTS.md  COMMANDS.md  LICENSE  OPCODES.md  PROTOCOL.md  README.md  SERVERS.md  check_includes.sh  clean_var.sh  create_common_data_class.ast  meson.build  start_debug.sh  start_release.sh
doc/: clients.md  servers.md
etc/: k3.conf  k32.conf  main.conf  relay.conf
etc/ssl/: test_server.crt  test_server.key
k3/: fwd.hpp  xprecompiled.hpp
k3/agent/: globals.cpp  globals.hpp  module_main.cpp
k3/common/: clock.cpp  clock.hpp  message.cpp  message.hpp  server_list.cpp  server_list.hpp  service.cpp  service.hpp
k3/logic/: globals.cpp  globals.hpp
k32/: fwd.hpp  xprecompiled.hpp
k32/agent/: account_supervisor.cpp  account_supervisor.hpp  globals.cpp  globals.hpp  user_information.cpp  user_information.hpp  user_service.cpp  user_service.hpp  user_ws_status.hpp
k32/agent/data/: role_information.cpp  role_information.hpp  role_snapshot.cpp  role_snapshot.hpp  user_information.cpp  user_information.hpp  user_ws_status.hpp
k32/agent/static/: role_service.cpp  role_service.hpp  user_service.cpp  user_service.hpp
k32/common/: clock.cpp  clock.hpp  http_future.cpp  http_future.hpp  http_requestor.cpp  http_requestor.hpp  https_requestor.cpp  https_requestor.hpp  meson.build  message.cpp  message.hpp  remote_service_information.cpp  remote_service_information.hpp  response_future.cpp  response_future.hpp  service.cpp  service.hpp  service_future.cpp  service_future.hpp  service_response.cpp  service_response.hpp  target_service_descriptor.cpp  target_service_descriptor.hpp
k32/common/data/: remote_service_information.cpp  remote_service_information.hpp  role_information.cpp  role_information.hpp  role_record.cpp  role_record.hpp  service_information.cpp  service_information.hpp  service_record.cpp  service_record.hpp  service_response.cpp  service_response.hpp  user_information.cpp  user_information.hpp  user_record.cpp  user_record.hpp
k32/common/fiber/: http_future.cpp  http_future.hpp  service_future.cpp  service_future.hpp
k32/common/static/: clock.cpp  clock.hpp  http_requestor.cpp  http_requestor.hpp  service.cpp  service.hpp
k32/logic/: globals.cpp  globals.hpp
k32/logic/hydrated/: role.cpp  role.hpp  role_basic_information.cpp  role_basic_information.hpp
k32/logic/static/: role_service.cpp  role_service.hpp
k32/monitor/: globals.cpp  globals.hpp
k32/monitor/data/: role_information.cpp  role_information.hpp
k32/monitor/static/: role_service.cpp  role_service.hpp
